2009-04-07  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Monitor.py: made import readline optional

	* setup.py (doit): package_data uses *.html & *.jpg

2009-03-08  Sverker Nilsson  <sverker@sverker-laptop>

	* ANNOUNCE: news for 0.1.9

2009-01-09  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/gsl/Tester.py (TestOf.make_cat.get_example_expr): Made the
	example values be regenerated each time. (Unless 0 is true.)
	Affects speed sometimes (an extra function call per arg) but may
	also be faster.

	* guppy/heapy/Use.py (_GLUECLAMP_.load): changed usereadline to
	use_readline to correspond to doc .

	* guppy/heapy/Prof.py (Menu.delete): Removed commented-out lines
	to delete commands.

2008-11-03  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/UniSet.py (UniSet & IdentitySet): Removed several
	_get_xxx methods and put the definitions directly in properties as
	lambdas with docstrings (to clean up result of help()) . 

2008-10-31  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Prof.py (_GLUECLAMP.pb_): Added docstring

	* guppy/heapy/Monitor.py (monitor): Added docstring

	* guppy/heapy/UniSet.py (UniSet etc): Made the docstrings of _get_ 
	wording in terms of attributes rather than methods.

	* guppy/heapy/Use.py (_GLUECLAMP_): Added more dir/help

	* guppy/doc/__init__.py : Added more dir support

2008-10-28  Sverker Nilsson  <sverker@sverker-laptop>

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): Made explit long
	cast to long for num_poses, to get rid of warning from MSVC.

	* setup.py: Removed extra_compile_args and extra_link_args vars.

	* src/heapy/heapy.h: Removed DL_IMPORT macro usage.

	* src/sets/sets_internal.h: Removed all DL_IMPORT macros.
	  to get rid of warning from MSVC about inconsistent linkage.

2008-10-25  Sverker Nilsson  <sverker@sverker-laptop>

	* setup.py: Removed the extra compile args for MSWindows -
	  they were only there for debugging.

2008-10-24  Sverker Nilsson  <sverker@sverker-laptop>
