@@ -8,10 +8,45 @@ Specification Language (GSL), which can be used to formally specify
 aspects of Python programs and generate tests and documentation from a
 common source.
 
-The main news in this release is the inclusion of a patch by Chad
-Austin to compile with Visual Studio 2003 and Python 2.5 C
-compilers. I think this may fix similar problems with other Microsoft
-compilers.
+The main news in this release:
+
+o A patch by Chad Austin to compile with Visual Studio 2003 and Python
+  2.5 C compilers. I think this may fix similar problems with other
+  Microsoft compilers.
+
+o Tentative interactive help system, providing a .doc attribute that
+  can be used to get info on available attributes in text form and
+  also by invoking a browser.
+
+Begin Example
+
+>>> from guppy import hpy;hp=hpy()
+>>> hp.doc
+Top level interface to Heapy. Available attributes:
+Anything            Nothing             Via                 iso
+...
+
+>>> hp.doc.doc
+Overview documentation for top level Heapy object.
+Provides a listing of the available attributes.
+Accessing the attribute name on the doc objects gives further info, eg:
+
+>>> hp.doc.heap
+
+gives doc for the heap method when hp is the top level Heapy object.
+
+References may be embedded in the documentations. To access a
+reference, opening up a web browser with the doc for it one can do eg:
+
+>>> hp.doc.heap[1]
+
+The reference number 0 is special. If it is provided, it is the
+reference to the html doc for the described object itself. So to see
+in the web browser the doc for the heap method one can do:
+
+>>> hp.doc.heap[0]
+
+End Example
 
 License: MIT
 
