@@ -397,17 +397,21 @@ started. More tips are very welcome!
    <h2> Download</h2></a>
   <p>
 
-The latest version is in the svn trunk directory. As of this writing,
-08-04-08, I have tested it (rev. 23) successfully in 64 as well as 32
-bits mode with Ubuntu 7.10 on an AMD64, with Python 2.3, 2.4, 2.5 and
-2.6 . No major changes other than compatibility fixes have been made
-from Guppy 0.1.6 version below.
-</p>
+The latest version is in the svn trunk directory. </p>
   <p>
-In the nearest future, I plan to add some interactive help and some
-more examples to the documentation, perhaps a tutorial. Look out for
-this in the svn HEAD if you want the latest. 
+In Version 0.1.9 I have introduced interactive help and compatibility
+for MS compilers (see ANNOUNCE).</p>
+  <p>
+As of 08-04-08, I had tested rev. 23 successfully in 64 as well as 32
+bits mode with Ubuntu 7.10 on an AMD64, with Python 2.3, 2.4, 2.5 and
+2.6 . No major changes other than compatibility fixes had been made
+from Guppy 0.1.6.</p>
+  <p>
+As of 09-06-12, the latest version is 0.1.9 and is believed to be as
+compatible as previous versions and is due to be tested automatically
+as a package in the Debian framework.
 </p>
+  <p></p>
   <p>
  To check out the latest (HEAD) revision, you can do:
 </p>
@@ -416,15 +420,20 @@ svn co https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
 </pre>
   <p>
  To check out the latest release as of this writing
-(2008-04-08, guppy-0.1.8), you can do:
+(2009-06-12, guppy-0.1.9), you can do:
 </p>
   <pre>
-svn co -r23 https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
+svn co -r71 https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
 
 </pre>
   <h3> Source code releases in tarball format</h3>
   <table class='list' style='margin-bottom: 10px;'>
    <tr class='odd'>
+    <td><a href='http://pypi.python.org/pypi/guppy/0.1.9'> guppy-0.1.9</a></td>
+    <td>
+ Updated 2009-06-12. Added interactive help and improved 
+MS compatibility.</td></tr>
+   <tr>
     <td><a href='http://pypi.python.org/pypi/guppy/0.1.8'> guppy-0.1.8</a></td>
     <td> Updated 2008-04-08. Works with 64 bits and Python 2.6 .</td></tr>
    <tr class='even'>
@@ -501,6 +510,10 @@ any C compiler for Windows XP (yet).)
  Chad Austin has supplied a patch for compiling on Windows w/
 Visual Studio 2003 and Python 2.5. I think this may fix similar
 problems with other MS compilers, Cygwin &amp; Mingw as well.
+</li>
+   <li>
+ Yaroslav Halchenko is packaging and uploading Guppy into the
+Debian distribution.
 </li></ul><a name='Contact'>
    <h2>
  Contact
@@ -525,4 +538,4 @@ system:
    <dd><a href='http://sourceforge.net/tracker/?group_id=105577&atid=641821'> http://sourceforge.net/tracker/?group_id=105577&amp;atid=641821</a></dd>
    <dt> The Sourceforge project summary page is:</dt>
    <dd><a href='http://sourceforge.net/projects/guppy-pe'> http://sourceforge.net/projects/guppy-pe</a></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jan  9 17:06:04 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jun 12 13:42:39 2009</div></body></html>
